# platform-tools

./: .envrc.sample  .gitignore  .platform-helper-config-cache.yml  .pre-commit-config.yaml  .tool-versions  .trufflehogignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.conduit  Dockerfile.conduit.postgres  Dockerfile.conduit.redis  Dockerfile.debian  Dockerfile.test  README.md  SECURITY_CHECKLIST.md  activity-stream-copilot.yaml  addons-example.yml  application-services.patch  buildspec-ecr.yaml  buildspec-ecr.yml  buildspec-tests.yml  buildspec.conduit.yml  buildspec.database-copy.yml  buildspec.deploy-tools.yml  buildspec.pypi.yml  buildspec.test.yml  buildspec.unit_test.yml  buildspec.yml  code-deploy-bootstrap.py  code-security.datadog.yml  codebuild_cli.py  codecov.yml  copilot-bootstrap.py  copilot-helper.py  copilot_helper.py  cosmic-ray.toml  data-workspace-apps-copilot.yaml  datasci-copilot.yaml  dbtp-503-temp-notes.txt  default-storage.yml  (+28 more)
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
bootstrap-config/: activity-stream-copilot.yaml  activity-stream-copilot.yml  data-workspace-apps-copilot.yaml  data-workspace-apps-copilot.yml  datahub-copilot.yaml  datahub-copilot.yml  datasci-copilot.yaml  datasci-copilot.yml  datasci-trid-copilot.yml  directory-copilot.yaml  directory-copilot.yml  dso-copilot.yml  enav-copilot.yml  enhanced-support-copilot.yml  events-copilot.yml  exopps-copilot.yaml  exopps-copilot.yml  export-support-service-copilot.yml  exred-copilot.yml  finance-copilot.yaml  finance-copilot.yml  helpdesk-copilot.yml  icms-copilot.yml  intranet-copilot.yaml  intranet-copilot.yml  legal-basis-copilot.yaml  legal-basis-copilot.yml  lite-copilot.yaml  lite-copilot.yml  live-services-copilot.yaml  live-services-copilot.yml  market-access-copilot.yml  mi-copilot.yml  platform-copilot.yaml  platform-copilot.yml  prototypes-on-paas-copilot.yml  public-apis-copilot.yaml  public-apis-copilot.yml  ready-to-trade-copilot.yml  report-a-breach-copilot.yml  (+11 more)
bootstrap-image/: Dockerfile  default.conf.template  index.html
commands/: COMMANDS.md  README.md  addon-plans.yml  addons-template-map.yml  bootstrap_cli.py  check_cli.py  check_cloudformation.py  codebuild_cli.py  conduit_cli.py  copilot_cli.py  default-storage.yml  dns_cli.py  docs.md  jinja2_tags.py  utils.py  waf_cli.py
dbt_copilot_helper/: COMMANDS.md  README.md  addon-plans.yml  addons-template-map.yml  check_cloudformation.py  copilot_cli.py  default-addons.yml  dns_cli.py  exceptions.py  jinja2_tags.py  utils.py  waf_cli.py
dbt_platform_helper/: COMMANDS.md  README.md  addon-plans.yml  addons-template-map.yml  constants.py  default-addons.yml  default-extensions.yml  exceptions.py  jinja2_tags.py  legacy_exceptions.py  platform_exception.py
images/conduit/: README.md
integration-tests/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  source_db_init.sql
integration-tests/integration_tests/: test_database_copy.py
integration-tests/mocks/app/: Dockerfile  app.py  pyproject.toml
migration-tools/: README.md  build-copilot-config.py  ci-conf.yaml  ci-config.yml  combine-ci-paas-config.py  full-config.yaml  full-config.yml  get-ci-conf.py  get-ci-config.py  get-paas-config.py  main.py  paas-conf.yaml  paas-conf.yml  paas-config.yml  paas-config.yml.backup  requirements.txt
mutants/: mutmut-stats.json
regression_tests/: buildspec.regression-tests-pipeline-build-stage.yml  buildspec.regression-tests-pipeline-run-browser-tests.yml  buildspec.regression-tests-pipeline-run-codebase-deploy-pipeline-stage.yml  buildspec.regression-tests-pipeline-run-environment-pipeline-stage.yml  buildspec.regression-tests-pipeline-run-pipelines-stage.yml  pull_request_tests.sh  pull_request_tests_branch.sh  pull_request_tests_working.sh  reggie  reggie.sh  temp.sh
requirements/: base.in  base.txt  dev.in  dev.txt
schemas/: storage-schema.json
temp/: platform_config.yml  pydantic_spike.py  schema_spike.py
templates/: COMMANDS.md.jinja  custom-codebuild-role-policy.json  env-manifest.yaml  instructions.txt  put-codebuild-role-policy.json  storage-instructions.txt  svc-manifest-backend.yml  svc-manifest-public.yml  svc-manifest.yaml  svc-manifest.yml
terraform/: .checkov.baseline  .envrc.sample  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  release-config.json  terraform_tests.sh
tests/: bootstrap_strings.py  conftest.py  dummy_aws_credentials  invalid_test_config.yml  test_addons_validation.py  test_bootstrap_cli.py  test_check_cloudformation.py  test_codebuild_cli.py  test_command_bootstrap.py  test_command_check_cloudformation.py  test_command_codebase.py  test_command_codebuild.py  test_command_conduit.py  test_command_copilot.py  test_command_dns.py  test_command_pipeline.py  test_command_svc.py  test_command_waf.py  test_conduit_cli.py  test_config.yaml  test_config.yml  test_copilot_cli.py  test_copilot_helper.py  test_create_command_docs.py  test_dns_cli.py  test_storage_validation.py  test_utils.py  test_waf_cli.py  valid_test_waf.yml
tests/platform_helper/utils/fixtures/: pyproject.toml  pyproject_good.toml  pyproject_malformed.toml  pyproject_no_version.toml  test_service_manifest.yml  test_service_manifest_with_copilot_bootstrap_image.yml  test_service_manifest_with_mismatched_service_name_and_image_location.yml
tests/platform_helper/utils/fixtures/addons_files/: addon_plans.yml  alb_addons.yml  alb_addons_bad_data.yml  datadog_addons.yml  datadog_addons_bad_data.yml  invalid_addon_plans.yml  monitoring_addons.yml  no_param_addons.yml  opensearch_addons.yml  opensearch_addons_bad_data.yml  postgres_addons.yml  postgres_addons_bad_data.yml  prometheus_policy_addons_bad_data.yml  rds_addons.yml  rds_addons_bad_data.yml  redis_addons.yml  s3_addons.yml  s3_addons_bad_data.yml  s3_policy_addons.yml  s3_policy_addons_bad_data.yml  unsupported_addon.yml
tests/utils/fixtures/: pyproject.toml  pyproject_malformed.toml  pyproject_no_version.toml  test_service_manifest.yml
utils/: aws.py  bump_version.py  check_pypi.py  check_tf_plan.py  create_command_docs.py
(+1142 files in other folders)
