[tool.black]
line-length = 100

[tool.poetry]
name = "dbt-platform-helper"
version = "10.8.0"
description = "Set of tools to help transfer applications/services from GOV.UK PaaS to DBT PaaS augmenting AWS Copilot."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
readme = "dbt_platform_helper/README.md"
packages = [
    { include = "dbt_platform_helper" },
    { include = "platform_helper.py" }
]

[tool.poetry.scripts]
platform-helper = "platform_helper:platform_helper"

[tool.poetry.dependencies]
Jinja2 = "^3.1.3"
PyYAML = "6.0.1"
boto3 = "^1.28.24"
boto3-stubs = "^1.26.148"
botocore = "^1.34.85"
click = "^8.1.3"
cloudfoundry-client = "1.35.2"
mypy-boto3-codebuild = "^1.26.0.post1"
python = "^3.9"
schema = "0.7.5"
cfn-flip = "1.3.0"
aiohttp = "^3.8.4"
certifi = ">=2023.7.22,<2025.0.0"
cryptography = ">=41.0.3,<43.0.0"
jinja2-simple-tags = "^0.5.0"
requests = "^2.31.0"
prettytable = "^3.9.0"
semver = "^3.0.2"
tomlkit = "^0.12.2"
checkov = "^3.1.67"
slack-sdk = "^3.27.1"
jsonschema = "~=4.17.0"
cfn-lint = "^1.4.2"

[tool.poetry.group.dev.dependencies]
moto = {extras = ["all"], version = "^5.0.5"}
pyfakefs = "^5.2.2"
pytest = "^7.3.1"
pytest-env = "^0.8.1"
tox = "^4.6.0"
pre-commit = "^3.3.3"
freezegun = "^1.2.2"
parameterized = "^0.9.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
