[tool.black]
line-length = 100

[tool.poetry]
name = "dbt-platform-helper"
version = "15.2.1"
description = "Set of tools to help transfer applications/services from GOV.UK PaaS to DBT PaaS augmenting AWS Copilot."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
readme = "dbt_platform_helper/README.md"
packages = [
    { include = "dbt_platform_helper" },
    { include = "platform_helper.py" },
    { include = "terraform/elasticache-redis/plans.yml" },
    { include = "terraform/opensearch/plans.yml" },
    { include = "terraform/postgres/plans.yml" },
]

[tool.poetry.scripts]
platform-helper = "platform_helper:platform_helper"

[tool.poetry.dependencies]
Jinja2 = "3.1.6"
PyYAML = "6.0.1"
yamllint = "^1.35.1"
boto3 = "^1.35.2"
boto3-stubs = "^1.26.148"
botocore = "^1.34.85"
click = "^8.1.3"
cloudfoundry-client = "1.35.2"
mypy-boto3-codebuild = "^1.26.0.post1"
python = ">3.9.0,<3.9.1 || >3.9.1,<4.0"
schema = "0.7.5"
cfn-flip = "1.3.0"
aiohttp = "^3.11.16"
certifi = ">=2023.7.22,<2025.0.0"
cryptography = ">=44.0.1, <45"
jinja2-simple-tags = "^0.5.0"
requests = "^2.31.0"
prettytable = "^3.9.0"
semver = "^3.0.2"
tomlkit = "^0.12.2"
slack-sdk = "^3.27.1"
jsonschema = "~=4.17.0"
cfn-lint = "^1.4.2"
psycopg2-binary = "^2.9.9"
checkov = "^3.2.405"

[tool.poetry.group.dev.dependencies]
moto = {extras = ["all"], version = "^5.0.28"}
pyfakefs = "^5.2.2"
pytest = "^8.3.5"
pytest-env = "^0.8.1"
tox = "^4.6.0"
pre-commit = "^3.3.3"
freezegun = "^1.2.2"
parameterized = "^0.9.0"
pytest-xdist = "^3.5.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
