[tool.black]
line-length = 100

[tool.poetry]
name = "dbt-platform-helper"
version = "15.10.0"
description = "Set of tools to help transfer applications/services from GOV.UK PaaS to DBT PaaS augmenting AWS Copilot."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
readme = "dbt_platform_helper/README.md"
packages = [
    { include = "dbt_platform_helper" },
    { include = "platform_helper.py" },
    { include = "terraform/elasticache-redis/plans.yml" },
    { include = "terraform/opensearch/plans.yml" },
    { include = "terraform/postgres/plans.yml" },
]

[tool.poetry.scripts]
platform-helper = "platform_helper:platform_helper"

[tool.poetry.dependencies]
Jinja2 = "3.1.6"
yamllint = "^1.35.1"
boto3 = "^1.35.2"
botocore = "^1.34.85"
click = "^8.1.3"
python = ">3.9.1,<4.0"
schema = "0.7.5"
jinja2-simple-tags = ">=0.5,<0.7"
requests = "^2.31.0"
prettytable = "^3.9.0"
slack-sdk = "^3.27.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.11.7"
cfn-flip = "^1.3.0"

[tool.poetry.group.dev.dependencies]
checkov = "^3.2.405"
moto = {extras = ["all"], version = "^5.0.28"}
pyfakefs = "^5.2.2"
pytest = "^8.3.5"
pytest-env = ">=0.8.1,<1.2.0"
tox = "^4.6.0"
pre-commit = ">=3.3.3,<5.0.0"
freezegun = "^1.2.2"
parameterized = "^0.9.0"
pytest-xdist = "^3.5.0"
pytest-cov = "^6.0.0"
mypy-boto3-codebuild = "^1.40.8"

python-hcl2 = "^7.3.1"
boto3-stubs =  "^1.26.148"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
