[tool.black]
line-length = 100

[tool.poetry]
name = "dbt-platform-helper"
version = "0.1.21"
description = "Set of tools to help transfer applications/services from GOV.UK PaaS to DBT PaaS augmenting AWS Copilot."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
readme = "commands/README.md"
packages = [
    { include = "commands" },
    { include = "platform_helper.py" }
]

[tool.poetry.scripts]
platform-helper = "platform_helper:platform_helper"

[tool.poetry.dependencies]
Jinja2 = "3.1.2"
PyYAML = "6.0.1"

[tool.poetry.group.dev.dependencies]
cfn-lint = "^0.77.7"
moto = {extras = ["all"], version = "^4.1.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
